fix: add Jekyll front matter to main.scss to enable SCSS compilation
Jekyll requires front matter (even if empty) to process SCSS files.
Without it, the file was not being compiled to CSS, resulting in 404.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,3 +1,8 @@
+---
+# Jekyll requires front matter (even empty) to process SCSS files
+# This file compiles to /assets/css/main.css
+---
+
 // Import partials from `_sass`
 @import "variables";
 @import "base";
