--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,6 +4,7 @@
 ---
 
 // Import partials from `_sass`
+// Note: @import is deprecated in Dart Sass 3.0 but required for Jekyll compatibility
 @import "variables";
 @import "base";
 @import "layout";
