--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google" content="notranslate">
 
   <!-- Early console noise filter: 확장 프로그램/CSP/Giscus 노이즈 (Chrome, Safari) -->
   <script>
