--- a/_sass/_chat-widget.scss
+++ b/_sass/_chat-widget.scss
@@ -678,15 +678,17 @@
 /* Mobile Responsive */
 @media (max-width: 768px) {
   .chat-widget {
-    bottom: 1rem;
+    bottom: 1.5rem;
     right: 1rem;
   }
 
   .chat-widget-toggle {
-    bottom: 1rem;
+    bottom: 1.5rem;
     right: 1rem;
     width: 52px;
     height: 52px;
+    /* 모바일에서 콘텐츠와 겹침 방지 */
+    z-index: calc(var(--z-modal, 1000) + 2);
   }
 
   .chat-widget-toggle svg {
