--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -2194,10 +2194,8 @@ ins.adsbygoogle-noablate {
   }
   
   .toc-container {
-    position: sticky;
-    top: calc(var(--header-height) + 1.5rem);
-    max-height: calc(100vh - var(--header-height) - 3rem);
-    overflow-y: auto;
+    /* TOC stays at the top of post, no sticky/floating behavior */
+    position: relative;
     height: auto;
   }
   
